@@ -70,9 +70,6 @@ survreg <- function(formula, data, weights, subset, na.action,
     if (type=="mright" || type=="mcounting") 
         stop("multi-state survival is not supported")
    
-    pterms <- sapply(mf, inherits, 'coxph.penalty')
-    if (any(pterms)) stop("survreg does not support penalized terms such as frailty, pspline, or ridge")
-
     cluster <- model.extract(m, "cluster")
     if (length(cluster)) {
         if (missing(robust)) robust <- TRUE
@@ -208,6 +205,8 @@ survreg <- function(formula, data, weights, subset, na.action,
     # Check for penalized terms
     pterms <- sapply(m, inherits, 'coxph.penalty')
     if (any(pterms)) {
+        if (any(grepl("frailty", names(pterms))))
+            stop("survreg does not support frailty terms")
 	pattr <- lapply(m[pterms], attributes)
 	# 
 	# the 'order' attribute has the same components as 'term.labels'
